public/css/main.css
/*----------------------------------------------------------------------------
----- global root variables -----
----------------------------------------------------------------------------*/
:root {
    --card-padding-vertical: 40px;
    --card-padding-horizontal: 40px;
}

/*----------------------------------------------------------------------------
----- general styles -----
----------------------------------------------------------------------------*/
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Montserrat', sans-serif;
    outline: none;
}

body {
    background: rgb(20,30,48);
    background: linear-gradient(105deg, rgba(20,30,48,1) 0%, rgba(36,59,85,1) 100%);
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-size: 100% 100%;
    display: flex;
    flex-flow: column nowrap;
    justify-content: center;
    align-items: center;
    color: rgb(40, 40, 40);
    text-align: center;
    font-size: 1.5rem;
}

.button {
    width: 100%;
    border-radius: 2em;
    background-color: rgb(40, 40, 40);
    border: none;
    padding: .65em;
    text-decoration: none;
    color: white;
}

.button, .button i {
    font-size: .75em;
}

.section-title {
    color: white;
    width: 100%;
    font-size: .65em;
}

/*----- containers -----*/
.column {
    display: flex;
    flex-direction: column;
}

.container {
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: .75em;
}

.card {
    background-color: white;
    width: 100%;
    border-radius: .35em;
    padding: var(--card-padding-vertical) var(--card-padding-horizontal);
    margin-bottom: 3em;
}

.card span, .card p {
    font-size: 1.2em;
}

.container>h1 {
    font-size: 1.5em;
    font-weight: 900;
    margin-bottom: 1.5em;
}

.card h2 {
    margin-bottom: 20px;
}

.card-title {
    font-size: 1.5em;
    margin-bottom: 30px;;
    width: calc(100% + calc(var(--card-padding-horizontal) * 2));
    margin-left: calc(var(--card-padding-horizontal) * -1);
    border-bottom: 2px solid rgb(220, 220, 220);
    vertical-align: middle;
    padding-bottom: 1em;
    text-align: center;
    padding-left: var(--card-padding-horizontal);
    padding-right: var(--card-padding-horizontal);
}

.full-card-width {
    width: calc(100% + calc(var(--card-padding-horizontal) * 2));
    margin-left: calc(var(--card-padding-horizontal) * -1);
}

/*----- dropdowns -----*/
.dropdown, input {
    border: 2px solid rgb(220, 220, 220);
    background-color: rgb(250, 250, 250);
    padding: .75em;
    margin-bottom: 20px;
    max-width: 100%;
    text-align: left;
    border-radius: 10px;
}

.dropdown-btn {
    display: flex;
    justify-content: space-between;
}

.dropdown-menu {
    flex-flow: column nowrap;
    position: relative;
    left: 0;
    top: 0;
    display: flex;
}

.dropdown-menu a {
    font-size: .75em;
    color: rgb(85, 85, 85);
    text-decoration: none;
    padding: .25em 0;
}

.dropdown-menu a:nth-of-type(1) {
    margin-top: 1em;
    padding-top: 1em;
    border-top: 2px solid rgb(220, 220, 220);
}

.dropdown p, .dropdown i {
    font-size: .65em;
}

/*----- forms -----*/
form input {
    font-size: .65em;
}

p.label {
    margin-bottom: .25em;
}

.form-title {
    font-size: 1.25em;
    padding-bottom: 1em;
    text-align: center;
}

/*----------------------------------------------------------------------------
----- main form -----
----------------------------------------------------------------------------*/
.main-form.card {
    width: 100%;
    text-align: left;
}

.main-form.container {
    flex-flow: column nowrap;
}

.weight-selection {
    display: flex;
    flex-flow: row nowrap;
    margin-bottom: 1em;
}

.weight-selection #weight-input {
    width: 70%;
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
    margin: 0;
    max-height: 150px;
    flex-grow: 1;
}

.weight-selection #unit-dropdown {
    width: 30%;
    border-bottom-left-radius: 0;
    border-top-left-radius: 0;
    margin: 0;
    min-width: 45px;
    max-width: 75px;
}

.reps-selection {
    display: flex;
    flex-flow: row nowrap;
    margin-bottom: 1em;
}

.reps-selection p, .reps-selection input {
    margin-right: 1em;
}

/*----------------------------------------------------------------------------
----- results display -----
----------------------------------------------------------------------------*/
.results p span {
    font-size: .65em;
    text-align: left;
}

.results.container {
    flex-flow: column nowrap;
    display: none;
}

.results.card {
    flex-flow: column nowrap;
    text-align: center;
}

.results input {
    font-size: .65em;
}

.results-row {
    background-color: white;
    display: flex;
    padding: 10px 0;
}

.results-header {
    background-color: rgb(220, 220, 220);
    display: flex;
    padding: 10px var(--card-padding-horizontal);
    margin-bottom: 10px;
}

#one-rep-maxes-results .results-row .exercise-name, #one-rep-maxes-results .results-header .exercise-name {
    flex: 1 1 75%;
}

#one-rep-maxes-results .results-row .exercise-weight-range,#one-rep-maxes-results .results-header .exercise-weight-range {
    flex: 1 1 25%;
}

#ideal-ranges-results .results-row .exercise-name, #ideal-ranges-results .results-header .exercise-name {
    flex: 1 1 55%;
}

#ideal-ranges-results .results-row .exercise-weight-range,#ideal-ranges-results .results-header .exercise-weight-range {
    flex: 1 1 45%;
}

.set-examples {
    margin-bottom: 25px;
}

/*----------------------------------------------------------------------------
----- footer -----
----------------------------------------------------------------------------*/
.footer {
    background-color: white;
    padding: 50px;
    border-top: 4px solid lightgray;
    flex-flow: column nowrap;
    align-items: center;
    display: none;
}

#disclaimer {
    font-size: .5em;
}

#contact, #share-icons, #disclaimer {
    margin-bottom: 30px;
}

#contact a {
    padding: 1em 3em;
    font-size: .5em;
}

#share-icons a {
    color: white;
}

#share-icons a img {
    width: 30px;
    height: 30px;
}

/*---------------------------------------------------------------------------- 
----- animation -----
----------------------------------------------------------------------------*/
.dropdown-arrow-rotate {
    animation: rotate .5s forwards;
}

/*----- keyframe animations -----*/
@keyframes rotate {
    0% {
        transform: rotate(0deg);
    }
    100% {
        transform: rotate(180deg);
    }
}

/*----------------------------------------------------------------------------
----- breakpoints -----
----------------------------------------------------------------------------*/

/* Small devices (landscape phones, 576px and up) */
@media screen and (min-width: 576px) {
    form.main-form {
        max-width: 560px;
        margin: 0 auto;
    }
}

/* Medium devices (tablets, 770px and up) */
@media (min-width: 770px) {
    .main-form.card {
        margin-top: 30px;
        width: 717px;
    }

    #disclaimer {
        width: 50%;
    }
}

/* Large devices (desktops, 992px and up) */
@media (min-width: 992px) {
    .results.container {
        flex-flow: row wrap;
    }
    
    .results.card {
        font-size: .8em;
        width: 350px;
        min-height: 585px;
        margin-right: 20px;
        margin-left: 20px;
    }

    .results.card div h2 {
        font-size: .8em;
    }
}

/* Extra large devices (large desktops, 1200px and up) */
@media (min-width: 1200px) {
    /* nothing for now (; */
}

